# To-Do-Application

./: README.md  manage.py  pyproject.toml
todoapp/: settings.py  urls.py
todoapp/static/styles/: create_task.css  list_tasks.css  login_style.css  register_style.css  task.css  user_profile.css
todoapp/todoapp_tasks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
todoapp/todoapp_tasks/migrations/: 0001_initial.py  0002_initial.py  0002_todotask_created_date_todotask_update_date.py  0003_alter_todotask_created_date.py  0004_alter_todotask_created_date.py
todoapp/todoapp_tasks/templates/: create_task.html  task_list.html  task_object.html
todoapp/todoapp_tasks/templates/style/: task_list_design.css
todoapp/todoapp_users/: apps.py  models.py  serializers.py  urls.py  views.py
todoapp/todoapp_users/migrations/: 0001_initial.py  0002_user_tasks.py
todoapp/todoapp_users/templates/authentication/: login.html  new_login.html  register.html
todoapp/todoapp_users/templates/password_reset/: password_reset_mail.html
todoapp/todoapp_users/templates/user_example/: index.html  user_profile.html
